--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
       </div>
 
-      <div>
+      <div class="js-menu">
         <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
         <ul class="flex gap20 menu-nav" data-menu="list" id="menu">
           <li><a href="#sobre">Sobre</a></li>
@@ -253,35 +253,35 @@
     </div>
     <div class="container-exp">
       <ul class="animais-lista js-tabmenu">
-        <li><img src="./img/experiencia/design.jpg" alt="Design"></li>
-        <li><img src="./img/experiencia/engenharia.jpg"></li>
-        <li><img src="./img/experiencia/dev.jpg"></li>
+        <li> <p class="text-foto">Designer Gráfico</p><img src="./img/experiencia/design.jpg" alt="Design"></li>
+        <li><p class="text-foto">Projetista Civil</p><img src="./img/experiencia/engenharia.jpg" alt="Engenharia"></li>
+        <li><p class="text-foto">Desenvolvedor Web</p><img src="./img/experiencia/dev.jpg" alt="Desenvolvedor"></li>
 
       </ul>
-      <div class="animais-descricao js-tabcontent">
+      <div class="exp-descricao js-tabcontent">
         <section data-anime="show-right">
           <h2>Designer Gráfico.</h2>
           <p>2016-2018</p>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
-          Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>No começo de 2016 eu trabalhei em uma gráfica chamada Medida Certa, no começo minha função era verificar a qualidade, de cores, qualidade de resolução, formato das artes a serem impressas, o padrão de cor impresso era o CMYK, a verificação e manutenção das artes era feita nos seguintes software: CorelDraw, Photoshop e Illustrator.<br>
+            Passado alguns meses, eu comecei a executar o trabalho de montagem de chapas para impressão, organizando, ao montar uma chapa para impressão deve se atentar para as cores, como eram impressas diversas artes diferentes uma das outras, eu organizava as cores semelhantes umas perto da outra para que na hora da impressão final não houvesse problema de uma azul ficar avermelhado, por exemplo.
+            <br>Outra das funções era o atendimento ao cliente, que poderia ser o atendimento para verificação da arte dele, ou para verificação do padrão de qualidade da impressão, cores que ele julgou que apresentaram diferença para a tela entre outras coisas.
+            Foi um período bem importante na minha vida profissional, o único período que e trabalhei no regime CLT.
+            Em 2018 eu saio devido à mudança de horário de funcionamento da gráfica, mudança essa que tornaria inviável a continuação na faculdade naquele momento.
+          </p>
         </section>
         <section data-anime="show-right">
           <h2>Projetista Civil</h2>
           <p>2019-2020</p>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
-          Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.
-          De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.
-          Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.
-          De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.
-          Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>Em 2019 eu comecei a planejar e executar projetos de reformas de imoveis, tanto projetos simples, como uma troca de quadro de luz, quanto os mais complexos, como realocação de toda a hidráulica e elétrica do apartamento. <br>
+           Os projetos executivos e conceitual eram feitos no software Sketchup, os projetos técnicos e de detalhamento eram feitos em Autocad e Revit, pois precisavam de um maior detalhamento técnico para a execução da obra. <br>
+             O meio de captação de clientes era a plataforma habitissimo, nela profissionais autônomos encontram possíveis clientes para execução de sua obra, é feito da seguinte maneira, o cliente posta o trabalho a ser feito, até 4 empresas compram, e cada uma delas entram em contato com o cliente para mais informações, visitas técnicas e elaboração de orçamento. <br>
+            Em 2020 ao terminar a faculdade eu comecei a estudar a área de programação e procurar uma pós-graduação na área de tecnologia, enquanto emitia laudos de engenharia civil, gostei muito do desenvolvimento web, de ver uma aplicação feita por mim em funcionamento,  sendo utilizada e  útil para resolução de problemas. <br> Em 2021 eu comecei a estudar o desenvolvimento front end devido a recomendação de um amigo que me apresentou os cursos da origamid.</p>
         </section>
         <section data-anime="show-down">
           <h2>Desenvolvedor Web</h2>
           <p>2021 - Atual</p>
-          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
-          Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.
-          De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.
-          Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>Hoje eu desenvolvo pequenos projetos de sites, faço o design do site no figma e executo utilizando HTML, CSS (SCSS), Javascript e React. Meu primeiro site profissional foi o bikcraft, que você pode ver na guia <a class="azul-text" href="#projetos">Projetos</a>, que eu fiz durante o curso de HTML e CSS para iniciantes da origamid. <br>
+          E a alguns meses atrás eu fiz meu primeiro site para um cliente, que é o AMT, fiz todo do zero, desde o design ao código final do site. A AMT é uma empresa de telecomunicações, que presta serviços e soluções nas áreas telefonia, redes, consultoria, e monitoramento. <br> Nesse momento, eu continuo desenvolvendo meus projetos pessoas e buscando experiência de trabalho em uma empresa de fato, para começar de vez a minha carreira de desenvolvedor front-end</p>
         </section>
       </div>
     </div>
@@ -321,9 +321,9 @@
             <span class="faculdade-instituicao">ORIGAMID</span>
           </li>
           <li class="faculdade">
-            <span class="faculdade-tipo">CURSO</span>
-            <h3 class="faculdade-curso">Fundamentos de Lógica de Programação</h3>
-            <span class="faculdade-instituicao">FUNDAÇÃO BRADESCO</span>
+            <span class="faculdade-tipo">CURSO TÉCNICO</span>
+            <h3 class="faculdade-curso">Montagem e Manutenção de Computadores e Redes</h3>
+            <span class="faculdade-instituicao">Universo Profissional</span>
           </li>
 
         </ul>
@@ -347,9 +347,10 @@
               <p>Neste curso eu aprendi a como utilizar o React do zero para o desenvolvimento de aplicações web reativas.
                 Consegui aprender a criar um aplicativo web com funcionalidades parecidas de redes sociais como o Instagram.
                 O foco do curso foi no entendimento completo do React, com isso praticamente tudo foi criado do zero, sem a dependência de pacotes externos.</p>
-              <li>Fundamentos de Lógica de Programação <span>15h</span> </li>
-              <p>Este curso aborda o conceito de lógica, lógica de programação e o pensamento dedutivo e matemático que embasa a construção de instruções lógicas corretas.
-                Para isso, são apresentados os fundamentos básicos da lógica da programação e as principais técnicas para o desenvolvimento de algoritmos: descrição narrativa, fluxograma e pseudocódigo.</p>
+              <li>Montagem e Manutenção de Computadores e Redes <span>120h</span> </li>
+              <p>Este curso aborda a montagem de infraestrutura de redes, e montagem de hardware, o modulo de hardware aprendemos a reconhecer cada componente de um computador e identificar com exatidão cada um, descrevendo marca, modelo, potencia, funcionalidade e compatibilidade com outros componentes. Além de aprender a montar de desmontar o computador. 
+              O modulo de Redes divide-se em dois, redes cabeadas e redes wireless, em redes cabeadas aprendi sobre as redes mais antigas até as mais modernas, quais os componentes necessários para a montagem de uma rede. Aprendi a instalar e configurar Servidores Microsoft e a controlar um Domínio. No modulo de rede wireless aprendemos a migrar de redes cabeadas para rede sem fio, aprendi a trabalhar com antenas internas (indoor) e antenas externas (outdoor).
+              </p>
             </ul>
           </div>
 
@@ -420,7 +421,7 @@
   <footer class="footer-bg">
     <p>Patrick Brasil © 2020 - 2022. Alguns direitos reservados.</p>
   </footer>
-  
+
 
   <script type="module" src="./js/script.js"></script>
   <script src="https://kit.fontawesome.com/a841b5779a.js" crossorigin="anonymous"></script>
