--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
   <header class="main-header" id="sobre">
     <div class="container-intro">
-      <div class="foto-pessoal">
+      <div class="foto-pessoal fadeInUp" data-anime="500">
         <img src="./img/pk.jpg" alt="Patrick">
         <h1><span class="cinza">Eu sou</span> Patrick Brasil</h1>
         <p>Engenheiro e Desenvolvedor</p>
@@ -56,7 +56,7 @@
       </div>
     </div>
   </header>
-  <section id="habilidade" class="habilidades-bg">
+  <section id="habilidade" class="habilidades-bg js-scroll-animado">
     <div class="container-habilidades">
       <h2>Habilidades</h2>
       <p>Certo. Vamos jogar alguma luz sobre minhas habilidades.</p>
@@ -192,7 +192,7 @@
     </div>
   </section>
 
-  <section id="projetos" class="projetos-bg">
+  <section id="projetos" class="projetos-bg js-scroll-animado">
     <div class="container-habilidades branco">
       <h2>Projetos</h2>
       <p class="branco">Confira meus últimos projetos.</p>
@@ -245,7 +245,7 @@
     </div>
   </section>
 
-  <section class="container-principal" id="experiencia">
+  <section class="container-principal js-scroll-animado" id="experiencia">
 
     <div class="text-align-xp">
       <h2 class="timeline-title">Experiências e Trabalhos.</h2>
@@ -253,9 +253,15 @@
     </div>
     <div class="container-exp">
       <ul class="animais-lista js-tabmenu">
-        <li> <p class="text-foto">Designer Gráfico</p><img src="./img/experiencia/design.jpg" alt="Design"></li>
-        <li><p class="text-foto">Projetista Civil</p><img src="./img/experiencia/engenharia.jpg" alt="Engenharia"></li>
-        <li><p class="text-foto">Desenvolvedor Web</p><img src="./img/experiencia/dev.jpg" alt="Desenvolvedor"></li>
+        <li>
+          <p class="text-foto">Designer Gráfico</p><img src="./img/experiencia/design.jpg" alt="Design">
+        </li>
+        <li>
+          <p class="text-foto">Projetista Civil</p><img src="./img/experiencia/engenharia.jpg" alt="Engenharia">
+        </li>
+        <li>
+          <p class="text-foto">Desenvolvedor Web</p><img src="./img/experiencia/dev.jpg" alt="Desenvolvedor">
+        </li>
 
       </ul>
       <div class="exp-descricao js-tabcontent">
@@ -273,22 +279,22 @@
           <h2>Projetista Civil</h2>
           <p>2019-2020</p>
           <p>Em 2019 eu comecei a planejar e executar projetos de reformas de imoveis, tanto projetos simples, como uma troca de quadro de luz, quanto os mais complexos, como realocação de toda a hidráulica e elétrica do apartamento. <br>
-           Os projetos executivos e conceitual eram feitos no software Sketchup, os projetos técnicos e de detalhamento eram feitos em Autocad e Revit, pois precisavam de um maior detalhamento técnico para a execução da obra. <br>
-             O meio de captação de clientes era a plataforma habitissimo, nela profissionais autônomos encontram possíveis clientes para execução de sua obra, é feito da seguinte maneira, o cliente posta o trabalho a ser feito, até 4 empresas compram, e cada uma delas entram em contato com o cliente para mais informações, visitas técnicas e elaboração de orçamento. <br>
-            Em 2020 ao terminar a faculdade eu comecei a estudar a área de programação e procurar uma pós-graduação na área de tecnologia, enquanto emitia laudos de engenharia civil, gostei muito do desenvolvimento web, de ver uma aplicação feita por mim em funcionamento,  sendo utilizada e  útil para resolução de problemas. <br> Em 2021 eu comecei a estudar o desenvolvimento front end devido a recomendação de um amigo que me apresentou os cursos da origamid.</p>
+            Os projetos executivos e conceitual eram feitos no software Sketchup, os projetos técnicos e de detalhamento eram feitos em Autocad e Revit, pois precisavam de um maior detalhamento técnico para a execução da obra. <br>
+            O meio de captação de clientes era a plataforma habitissimo, nela profissionais autônomos encontram possíveis clientes para execução de sua obra, é feito da seguinte maneira, o cliente posta o trabalho a ser feito, até 4 empresas compram, e cada uma delas entram em contato com o cliente para mais informações, visitas técnicas e elaboração de orçamento. <br>
+            Em 2020 ao terminar a faculdade eu comecei a estudar a área de programação e procurar uma pós-graduação na área de tecnologia, enquanto emitia laudos de engenharia civil, gostei muito do desenvolvimento web, de ver uma aplicação feita por mim em funcionamento, sendo utilizada e útil para resolução de problemas. <br> Em 2021 eu comecei a estudar o desenvolvimento front end devido a recomendação de um amigo que me apresentou os cursos da origamid.</p>
         </section>
         <section data-anime="show-down">
           <h2>Desenvolvedor Web</h2>
           <p>2021 - Atual</p>
           <p>Hoje eu desenvolvo pequenos projetos de sites, faço o design do site no figma e executo utilizando HTML, CSS (SCSS), Javascript e React. Meu primeiro site profissional foi o bikcraft, que você pode ver na guia <a class="azul-text" href="#projetos">Projetos</a>, que eu fiz durante o curso de HTML e CSS para iniciantes da origamid. <br>
-          E a alguns meses atrás eu fiz meu primeiro site para um cliente, que é o AMT, fiz todo do zero, desde o design ao código final do site. A AMT é uma empresa de telecomunicações, que presta serviços e soluções nas áreas telefonia, redes, consultoria, e monitoramento. <br> Nesse momento, eu continuo desenvolvendo meus projetos pessoas e buscando experiência de trabalho em uma empresa de fato, para começar de vez a minha carreira de desenvolvedor front-end</p>
+            E a alguns meses atrás eu fiz meu primeiro site para um cliente, que é o AMT, fiz todo do zero, desde o design ao código final do site. A AMT é uma empresa de telecomunicações, que presta serviços e soluções nas áreas telefonia, redes, consultoria, e monitoramento. <br> Nesse momento, eu continuo desenvolvendo meus projetos pessoas e buscando experiência de trabalho em uma empresa de fato, para começar de vez a minha carreira de desenvolvedor front-end</p>
         </section>
       </div>
     </div>
   </section>
 
 
-  <section class="formacao" id="formacao" aria-label="Formação">
+  <section class="formacao js-scroll-animado" id="formacao" aria-label="Formação">
 
     <div class="formacao-container">
       <h2 class="subtitulo">Formação</h2>
@@ -348,8 +354,8 @@
                 Consegui aprender a criar um aplicativo web com funcionalidades parecidas de redes sociais como o Instagram.
                 O foco do curso foi no entendimento completo do React, com isso praticamente tudo foi criado do zero, sem a dependência de pacotes externos.</p>
               <li>Montagem e Manutenção de Computadores e Redes <span>120h</span> </li>
-              <p>Este curso aborda a montagem de infraestrutura de redes, e montagem de hardware, o modulo de hardware aprendemos a reconhecer cada componente de um computador e identificar com exatidão cada um, descrevendo marca, modelo, potencia, funcionalidade e compatibilidade com outros componentes. Além de aprender a montar de desmontar o computador. 
-              O modulo de Redes divide-se em dois, redes cabeadas e redes wireless, em redes cabeadas aprendi sobre as redes mais antigas até as mais modernas, quais os componentes necessários para a montagem de uma rede. Aprendi a instalar e configurar Servidores Microsoft e a controlar um Domínio. No modulo de rede wireless aprendemos a migrar de redes cabeadas para rede sem fio, aprendi a trabalhar com antenas internas (indoor) e antenas externas (outdoor).
+              <p>Este curso aborda a montagem de infraestrutura de redes, e montagem de hardware, o modulo de hardware aprendemos a reconhecer cada componente de um computador e identificar com exatidão cada um, descrevendo marca, modelo, potencia, funcionalidade e compatibilidade com outros componentes. Além de aprender a montar de desmontar o computador.
+                O modulo de Redes divide-se em dois, redes cabeadas e redes wireless, em redes cabeadas aprendi sobre as redes mais antigas até as mais modernas, quais os componentes necessários para a montagem de uma rede. Aprendi a instalar e configurar Servidores Microsoft e a controlar um Domínio. No modulo de rede wireless aprendemos a migrar de redes cabeadas para rede sem fio, aprendi a trabalhar com antenas internas (indoor) e antenas externas (outdoor).
               </p>
             </ul>
           </div>
@@ -361,7 +367,7 @@
 
   </section>
 
-  <section id="contato">
+  <section class="js-scroll-animado" id="contato">
     <div class="titulo-contato">
       <h1>Entre em contato comigo</h1>
       <p>É hora de entrar em contato.</p>
@@ -422,10 +428,9 @@
     <p>Patrick Brasil © 2020 - 2022. Alguns direitos reservados.</p>
   </footer>
 
-
+  <script type = "module" src="./js/module/simple-anime.js"></script>
   <script type="module" src="./js/script.js"></script>
   <script src="https://kit.fontawesome.com/a841b5779a.js" crossorigin="anonymous"></script>
-  <script src="./js/module/jquery.js"></script>
 </body>
 
 </html>
