--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     <div class="formacao-container">
       <h2 class="subtitulo">Formação</h2>
       <div>
-        <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong> graduação</strong> 🎓 que terminei no final de 2020 em <strong>Engenharia Civil</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
+        <p class="formacao-texto">Minha mais recente experiência acadêmica foi a <strong> graduação</strong> 🎓 que terminei no final de 2020 em <strong>Engenharia Civil</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
         <ul class="faculdade-lista">
           <li class="faculdade">
             <span class="faculdade-tipo">Bacharel</span>
